--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">BTL_Nhom4</string>
+    <string name="title_home">Trang chủ</string>
+    <string name="title_project">Dự án</string>
+    <string name="title_workplace">Workplace</string>
 </resources>
