--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="title_home">Trang chủ</string>
     <string name="title_project">Dự án</string>
     <string name="title_workplace">Workplace</string>
+    <string name="bottom_nav_account">Tài Khoản</string>
 
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password</string>
@@ -20,5 +21,14 @@
     <string name="error_invalid_email">This email address is invalid</string>
     <string name="password_error">Please enter a password</string>
     <string name="error_invalid_password">Please enter a minimum password of 6 characters</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="language" >Ngôn ngữ</string>
+    <string name="acc_info">Thông tin tài khoản</string>
+    <string name="acc_update">Cập nhật thông tin</string>
+    <string name="signout">Đăng xuất</string>
+    <string name="acc_str">Tài khoản</string>
+    <string name="acc_help">Cài đặt và trợ giúp</string>
+    <string name="setting">Cài đặt</string>
 
 </resources>
