--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,12 +23,15 @@
     <string name="error_invalid_password">Please enter a minimum password of 6 characters</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="language" >Ngôn ngữ</string>
+    <string name="language">Ngôn ngữ</string>
     <string name="acc_info">Thông tin tài khoản</string>
     <string name="acc_update">Cập nhật thông tin</string>
     <string name="signout">Đăng xuất</string>
     <string name="acc_str">Tài khoản</string>
     <string name="acc_help">Cài đặt và trợ giúp</string>
     <string name="setting">Cài đặt</string>
+    <string name="market">Chợ</string>
+    <string name="device">Thiết bị</string>
+    <string name="add">Thêm</string>
 
 </resources>
