--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,5 +35,6 @@
     <string name="market">Chợ</string>
     <string name="device">Thiết bị</string>
     <string name="add">Thêm</string>
+    <string name="no_attendance">Bạn chưa checkin ngày hôm nay.</string>
 
 </resources>
