--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">BTL_Nhom4</string>
+    <string name="app_name">Checkin</string>
 
     <string name="title_home">Trang chủ</string>
     <string name="title_project">Dự án</string>
